[project]
name = "flowgate-key-facilities"
version = "0.1.0b1"
description = "Identify key facilities (lines & generators) whose outage would most impact a set of PSS/E flowgates."
readme = "README.md"
requires-python = ">=3.11,!=3.14.1,<3.15"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "cadvena" }
]
keywords = ["psse", "power systems", "flowgate", "PSS/E", "key facilities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "psse-model-util>=2026.4.5b1",
    "pandas",
    "networkx",
]

[project.urls]
Homepage = "https://github.com/ppsyOps/key_facilities"
Repository = "https://github.com/ppsyOps/key_facilities"
Issues = "https://github.com/ppsyOps/key_facilities/issues"

[project.scripts]
flowgate-key-facilities = "flowgate_key_facilities:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pdm.dev-dependencies]
# psse-model-util is a sibling repo installed editably into the venv
# (`pdm run pip install -e ../psse_model_util`); see README. It is not listed
# here because PDM cannot resolve the unpublished local path on lock.
test = [
    "pytest>=8",
    "pytest-cov",
]

[tool.pytest.ini_options]
# flowgate_key_facilities.py lives at the repo root; put it on sys.path so tests
# can `import flowgate_key_facilities` without an installed console-script entry point.
pythonpath = ["."]
testpaths = ["tests"]
# Always measure coverage so the fail_under gate (see [tool.coverage.report])
# is enforced on every `pytest` run, not just when --cov is passed.
addopts = "--cov=flowgate_key_facilities --cov-report=term-missing"

[tool.coverage.run]
source = ["flowgate_key_facilities"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
# CI gate. Goal is 100%; the gate is set below current coverage as a ratchet.
fail_under = 95
