[project]
name = "psse-utils"
dynamic = ["version"]
description = "A collection of small PSS/E utility scripts built on psse-model-util."
readme = "README.md"
requires-python = ">=3.11,!=3.14.1,<3.15"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "cadvena" }
]
keywords = ["psse", "power systems", "PSS/E", "scripts", "flowgate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "psse-model-util>=2026.4.5b1",
    "pandas",
    "networkx",
]

[project.urls]
Homepage = "https://github.com/ppsyOps/psse_utils"
Repository = "https://github.com/ppsyOps/psse_utils"
Issues = "https://github.com/ppsyOps/psse_utils/issues"

[project.scripts]
flowgate-key-facilities = "psse_utils.flowgate_key_facilities:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/psse_utils/__about__.py"
pattern = "__version__ = ['\"](?P<version>[^'\"]+)['\"]"

[tool.hatch.build.targets.wheel]
packages = ["src/psse_utils"]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Always measure coverage so the fail_under gate is enforced on every run.
addopts = "--cov=psse_utils --cov-report=term-missing"

[tool.coverage.run]
source = ["src/psse_utils"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
# CI gate. Goal is 100%; the gate is set below current coverage as a ratchet.
fail_under = 95
